# cpp-project-template

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  configure
cmake/: EnableFortran.cmake  ResultDiff.cmake
src/: CMakeLists.txt  config.h.in  foo.cpp  foo.h
test/: CMakeLists.txt  test_foobar.cpp
test/unittest/: CMakeLists.txt  failed_unittest.cpp  foobar_unittest.cpp
